# GeoguesserMAS

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  CONSTITUTION.md  Dockerfile  FRONTEND_DESIGN.md  backlog.md  compose.mongodb-dev.yaml  compose.yaml  demo_script.md  main.py  package-lock.json  pyproject.toml  requirements.txt  v2pland.md
.deepagents/: specialist_cache.json  tool_response_cache.json
data/: country_candidates.json  coverage_scan.json  coverage_scan_BR_replacements.json  coverage_scan_TH_replacements.json  coverage_scan_worldwide_v2_mapillary.json  taxonomy.json
deploy/: Caddyfile  backup.env.example  curl-auth.conf.example
docs/: cost_model.md  country_reference_enrichment_prompt.md  decision_log.md  feature_30_country_panorama_expansion.md  google_cloud_deployment.md  picture_pipeline.md  vision_inspector.md  vps_deployment.md
scripts/: README.md  build_reference_snapshot.mjs  compare_claude_opus_mas.py  diagnose_vision_transport.py  download_country_hint_files.mjs  generate_country_reference_files.mjs  run_gemini_flash.py  run_gemini_pro.py  run_mas.py  run_vision_bbox.py  run_vision_mas.py  summarize_results.py  update_reference_clues.mjs
tests/: test_agent_factory.py  test_agent_runtime.py  test_asset_migration.py  test_baselines.py  test_bbox.py  test_budget_middleware.py  test_claude_baseline.py  test_comparison.py  test_cost_model.py  test_coverage.py  test_dataset_definition.py  test_dataset_manifest.py  test_decision_log.py  test_deployment_artifacts.py  test_evaluation.py  test_panorama.py  (+25 more)
(+206 files in other folders)
