[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoguesser"
version = "0.1.0"
description = "Multi-agent geolocation system using LangChain Deep Agents and Gemini."
readme = "v2pland.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.2.8",
    "deepagents==0.6.12",
    "langsmith==0.9.8",
    "langchain-google-genai==4.2.7",
    "requests==2.34.2",
    "mercantile==1.2.1",
    "haversine==2.9.0",
    "pillow==12.3.0",
    "numpy==2.3.1",
    "mapbox-vector-tile==2.2.0",
    "python-dotenv==1.2.2",
]

[project.scripts]
geoguesser = "geoguesser.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
